chapter-19/networkpolicy-kuard-allow-test-source.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-kuard
spec:
  podSelector:
  matchLabels:
    app: kuard
  ingress:
    - from:
      - podSelector:
          matchLabels:
            run: test-source
